# student-accommodation

./: .gitignore  CMakeLists.txt  README.md
code/: CMakeLists.txt
code/command_line_apps/: CMakeLists.txt  sas_app.cpp
code/lib/: CMakeLists.txt  basic_types.h  data_creator.h  file_loader_data_creator.cpp  file_loader_data_creator.h  solver.cpp  solver.h
testing/: CMakeLists.txt  catch_main.cpp  catch_main.h  solver_test.cpp
